# clip-shot

./: AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  deploy.config.sh  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html  privacy.html
packaging/: build.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: monitors.rs
src-tauri/src/: capture.rs  clipboard.rs  history.rs  hotkeys.rs  lib.rs  macperm.rs  main.rs  settings.rs
src/lib/: Main.svelte  Overlay.svelte  i18n.ts  ipc.ts
src/routes/: +page.svelte
